deploy/blue-green/messenger-green-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: messenger-svc
    namespace: default
spec:
    selector:
        app: messenger
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: messenger-blue
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: messenger
            version: blue
    template:
        metadata:
            labels:
                app: messenger
                version: blue
        spec:
            containers:
                - name: messenger
                  ports:
                      - containerPort: 8080
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      initialDelaySeconds: 5
                      periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: messenger-green
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: messenger
            version: green
    template:
        metadata:
            labels:
                app: messenger
                version: green
        spec:
            containers:
                - name: messenger
                  ports:
                      - containerPort: 8080
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      initialDelaySeconds: 5
                      periodSeconds: 10
