deploy/blue-green/messenger-canary-monitoring.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: messenger-monitoring
spec:
    hosts:
        - messenger.example.com
    http:
        - match:
              - headers:
                    x-canary:
                        exact: "true"
          route:
              - destination:
                    host: messenger-canary
          fault:
              delay:
                  percentage:
                      value: 0.1
                  fixedDelay: 5s
