deploy/blue-green/messenger-green-deploy.istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: messenger-vs
    namespace: default
spec:
    hosts:
        - "*"
    gateways:
        - messenger-gateway
    http:
        - route:
              - destination:
                    host: messenger-blue-svc
                weight: 100
              - destination:
                    host: messenger-green-svc
                weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
    name: messenger-gateway
    namespace: default
spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - "*"
